--- a/letterboxdapp/src/App.css
+++ b/letterboxdapp/src/App.css
@@ -1,9 +1,13 @@
 .App {
   text-align: center;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+            Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+            sans-serif;
 }
 
 .App-logo {
-  height: 40vmin;
+  position: relative;
+  height: 8vmin;
   pointer-events: none;
 }
 
@@ -14,18 +18,18 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: white;
   min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .App-link {
-  color: #61dafb;
+  color: #0070f3;
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +39,125 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.hideHeader {
+  transform: translateX(-100vw);
+  background-color: white;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  font-size: calc(10px + 2vmin);
+  color: black;
+  transition: 2s;
+}
+
+.hideMain {
+  transform: translateX(100vw);
+  transition: 2s;
+}
+
+.mainPage {
+  transform: translateX(0vw);
+  transition: 2s;
+  min-height: 100vh;
+  min-width: 100vw;
+  position: absolute;
+  top: 0px;
+}
+
+code {
+  background: #fafafa;
+  border-radius: 5px;
+  padding: 0.75rem;
+  font-size: 1.1rem;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
+    DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
+}
+
+a {
+  text-decoration: none;
+  color: #0070f3;
+}
+
+.getstarted {
+  margin: 1rem;
+  flex-basis: 45%;
+  padding: 1.5rem;
+  text-align: left;
+  justify-content: center;
+  align-items: center;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+  background-color: #0070f3;
+  color: white;
+  vertical-align: middle;
+}
+
+.getstarted a {
+  color: white;
+  vertical-align: middle;
+}
+
+.getstarted img {
+  vertical-align: middle;
+  transform: scale(2);
+  padding-left: 2vh;
+  padding-right: 1vh;
+}
+
+.getstarted:hover img {
+  padding-left: 2.3vh;
+  padding-right: .7vh;
+  transform: scale(2.1);
+  transition: .1s ease;
+}
+
+.getstarted:hover {
+  cursor: pointer;
+  background-color: #00b8f5;
+}
+
+.button {
+  margin: 1rem;
+  flex-basis: 45%;
+  padding: 1.5rem;
+  text-align: center;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+}
+
+.inputbox {
+  margin: 1rem;
+  flex-basis: 45%;
+  padding: 1.5rem;
+  text-align: left;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 5px;
+  transition: color 0.15s ease, border-color 0.15s ease;
+}
+
+.no-bullets {
+  list-style-type: none;
+  max-height: 20vh;
+}
+
+.username {
+  margin: 1rem;
+  flex-basis: 45%;
+  padding: 1.5rem;
+  text-align: center;
+  color: inherit;
+  text-decoration: none;
+  border: 1px solid #eaeaea;
+  border-radius: 10px;
+  max-width: 7vw;
+  display: inline;
 }
