--- a/letterboxdapp/src/App.css
+++ b/letterboxdapp/src/App.css
@@ -1,3 +1,8 @@
+#root {
+  overflow: hidden;
+  height: 100vh;
+}
+
 .App {
   text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
@@ -51,12 +56,25 @@
   flex-direction: column;
   font-size: calc(10px + 2vmin);
   color: black;
-  transition: 2s;
+  transition: 1.5s;
 }
 
 .hideMain {
   transform: translateX(100vw);
-  transition: 2s;
+  transition: 1.5s;
+}
+
+@keyframes fade-in {
+  0% {opacity: 0%;}
+  20% {opacity: 20%;}
+  30% {opacity: 30%;}
+  40% {opacity: 40%;}
+  50% {opacity: 50%;}
+  60% {opacity: 60%;}
+  70% {opacity: 70%;}
+  80% {opacity: 80%;}
+  90% {opacity: 90%;}
+  100% {opacity: 100%;}
 }
 
 .mainPage {
@@ -66,6 +84,10 @@
   min-width: 100vw;
   position: absolute;
   top: 0px;
+  animation-name: fade-in;
+  animation-duration: 1s;
+  animation-fill-mode: forwards;
+  opacity: 10%;
 }
 
 code {
@@ -146,7 +168,9 @@ a {
 
 .no-bullets {
   list-style-type: none;
-  max-height: 20vh;
+  display: inline-block;
+  padding: 0px;
+  margin: auto;
 }
 
 .username {
@@ -160,4 +184,120 @@ a {
   border-radius: 10px;
   max-width: 7vw;
   display: inline;
+}
+
+.film-poster {
+  display: inline-grid;
+  width: 20%;
+  cursor: pointer;
+}
+
+.film-image {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.loader {
+  margin: auto;
+}
+
+.dataTabBeforeOpen {
+  height: 100%;
+  width: 100%;
+  opacity: 50%;
+}
+
+@keyframes popout {
+  0%   {left: 0vw;}
+  50%  {left: 24vw;}
+  60%  {left: 17vw;}
+  70% {left: 22vw;}
+  80% {left: 19vw;}
+  90% {left: 20.2vw;}
+  100% {left: 20vw}
+}
+
+.dataTabAfterOpen {
+  width: 80vw;
+  position: relative;
+  opacity: 100%;
+  transition: 1s ease;
+  animation-name: popout;
+  animation-delay: .08s;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  animation-timing-function: ease;
+}
+
+/* 
+SIDEBAR CSS !!! 
+*/
+
+/* Position and sizing of burger button */
+.bm-burger-button {
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  left: 36px;
+  top: 36px;
+}
+
+/* Color/shape of burger icon bars */
+.bm-burger-bars {
+  background: white;
+}
+
+/* Color/shape of burger icon bars on hover*/
+.bm-burger-bars-hover {
+  background: #a90000;
+}
+
+/* Position and sizing of clickable cross button */
+.bm-cross-button {
+  height: 24px;
+  width: 24px;
+}
+
+/* Color/shape of close button cross */
+.bm-cross {
+  background: #bdc3c7;
+}
+
+/*
+Sidebar wrapper styles
+Note: Beware of modifying this element as it can break the animations - you should not need to touch it in most cases
+*/
+.bm-menu-wrap {
+  position: fixed;
+  height: 100%;
+}
+
+/* General sidebar styles */
+.bm-menu {
+  background: #373a47;
+  padding: 2.5em 1.5em 0;
+  font-size: 1.15em;
+}
+
+/* Morph shape necessary with bubble or elastic */
+.bm-morph-shape {
+  fill: #373a47;
+}
+
+/* Wrapper for item list */
+.bm-item-list {
+  color: #b8b7ad;
+  padding: 0.8em;
+}
+
+/* Individual item */
+.bm-item {
+  display: inline-block;
+  padding-top: 10%;
+  padding-bottom: 10%;
+}
+
+/* Styling of overlay */
+.bm-overlay {
+  background: rgba(0, 0, 0, 0.3);
 }
